--- a/stlye.css
+++ b/stlye.css
@@ -54,6 +54,134 @@ body {
   height: 100%;
 }
 
+.design-view .select-base {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  display: none;
+  background-color: rgba(0, 0, 0, 0.3);
+  top: 0;
+}
+
+.design-view .select-base .select-box {
+  position: absolute;
+  width: 100px;
+  height: 100px;
+}
+
+.design-view .select-base .select-box .tooltip-box {
+  font-size: 12px;
+  white-space: nowrap;
+  position: absolute;
+  border-radius: 6px;
+  padding: 4px 6px;
+  left: calc(100% + 10px);
+  bottom: 10px;
+  background-color: #191822;
+  color: #fff;
+}
+
+.design-view .select-base .select-box .frame-box {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
+
+.design-view .select-base .select-box .frame-box .horizontal {
+  top: 33.33%;
+  position: absolute;
+  width: 100%;
+  height: 33.333%;
+  border-top: 1px dashed #eee;
+  border-bottom: 1px dashed #eee;
+}
+
+.design-view .select-base .select-box .frame-box .vertical {
+  left: 33.33%;
+  position: absolute;
+  height: 100%;
+  width: 33.333%;
+  border-left: 1px dashed #eee;
+  border-right: 1px dashed #eee;
+}
+
+.design-view .select-base .select-box .dot-box {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
+
+.design-view .select-base .select-box .dot-box .dot {
+  position: absolute;
+  width: 5px;
+  height: 5px;
+  background-color: #39f;
+}
+
+.design-view .select-base .select-box .dot-box .dot.left {
+  left: -2px;
+  top: calc(50% - 2px);
+}
+
+.design-view .select-base .select-box .dot-box .dot.right {
+  right: -2px;
+  top: calc(50% - 2px);
+}
+
+.design-view .select-base .select-box .dot-box .dot.top {
+  top: -2px;
+  left: calc(50% - 2px);
+}
+
+.design-view .select-base .select-box .dot-box .dot.bottom {
+  bottom: -2px;
+  left: calc(50% - 2px);
+}
+
+.design-view .select-base .select-box .handle-box {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  border: 1px solid #39f;
+  cursor: move;
+}
+
+.design-view .select-base .select-box .handle-box [class^="resize_line"] {
+  opacity: 0.1;
+  background-color: #39f;
+  position: absolute;
+}
+
+.design-view .select-base .select-box .handle-box .resize_line_left {
+  height: 100%;
+  width: 7px;
+  left: -4px;
+  cursor: ew-resize;
+}
+
+.design-view .select-base .select-box .handle-box .resize_line_top {
+  width: 100%;
+  height: 7px;
+  top: -4px;
+  cursor: ns-resize;
+}
+
+.design-view .select-base .select-box .handle-box .resize_line_bottom {
+  width: 100%;
+  height: 7px;
+  bottom: -4px;
+  cursor: ns-resize;
+}
+
+.design-view .select-base .select-box .handle-box .resize_line_right {
+  height: 100%;
+  width: 7px;
+  right: -4px;
+  cursor: ew-resize;
+}
+
 .iconfont {
   font-size: 24px;
   padding: 0 6px;
