--- a/stlye.scss
+++ b/stlye.scss
@@ -7,6 +7,7 @@ body {
   img {
     width: 100%;
   }
+  // 测量
   .measure-box {
     position: absolute;
     width: 100%;
@@ -44,6 +45,116 @@ body {
       top: 0;
       width: 100%;
       height: 100%;
+    }
+  }
+  //选区
+  .select-base {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    display: none;
+    background-color: rgba(0, 0, 0, 0.3);
+    top: 0;
+    .select-box {
+      position: absolute;
+      width: 100px;
+      height: 100px;
+      .tooltip-box {
+        font-size: 12px;
+        white-space: nowrap;
+        position: absolute;
+        border-radius: 6px;
+        padding: 4px 6px;
+        left: calc(100% + 10px);
+        bottom: 10px;
+        background-color: #191822;
+        color: #fff;
+      }
+      .frame-box {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        .horizontal {
+          top: 33.33%;
+          position: absolute;
+          width: 100%;
+          height: 33.333%;
+          border-top: 1px dashed #eee;
+          border-bottom: 1px dashed #eee;
+        }
+        .vertical {
+          left: 33.33%;
+          position: absolute;
+          height: 100%;
+          width: 33.333%;
+          border-left: 1px dashed #eee;
+          border-right: 1px dashed #eee;
+        }
+      }
+      .dot-box {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        .dot {
+          position: absolute;
+          width: 5px;
+          height: 5px;
+          background-color: #39f;
+          &.left {
+            left: -2px;
+            top: calc(50% - 2px);
+          }
+          &.right {
+            right: -2px;
+            top: calc(50% - 2px);
+          }
+          &.top {
+            top: -2px;
+            left: calc(50% - 2px);
+          }
+          &.bottom {
+            bottom: -2px;
+            left: calc(50% - 2px);
+          }
+        }
+      }
+      .handle-box {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        box-sizing: border-box;
+        border: 1px solid #39f;
+        cursor: move;
+        [class^="resize_line"] {
+          opacity: 0.1;
+          background-color: #39f;
+          position: absolute;
+        }
+        .resize_line_left {
+          height: 100%;
+          width: 7px;
+          left: -4px;
+          cursor: ew-resize;
+        }
+        .resize_line_top {
+          width: 100%;
+          height: 7px;
+          top: -4px;
+          cursor: ns-resize;
+        }
+        .resize_line_bottom {
+          width: 100%;
+          height: 7px;
+          bottom: -4px;
+          cursor: ns-resize;
+        }
+        .resize_line_right {
+          height: 100%;
+          width: 7px;
+          right: -4px;
+          cursor: ew-resize;
+        }
+      }
     }
   }
 }
