--- a/src/components/canvas/style.scss
+++ b/src/components/canvas/style.scss
@@ -8,11 +8,10 @@ body {
     width: 100%;
   }
   // 测量
-  .measure-box {
+  .measure-container {
     position: absolute;
     width: 100%;
     height: 100%;
-    display: none;
     background-color: rgba(0, 0, 0, 0.3);
     top: 0;
     .line {
@@ -38,6 +37,7 @@ body {
         background: #656060;
         padding: 4px;
         border-radius: 2px;
+        user-select: none;
       }
     }
     .handle-bar {
@@ -48,11 +48,10 @@ body {
     }
   }
   //选区
-  .select-base {
+  .select-container {
     position: absolute;
     width: 100%;
     height: 100%;
-    display: none;
     background-color: rgba(0, 0, 0, 0.3);
     top: 0;
     .select-box {
@@ -161,11 +160,13 @@ body {
 
 .iconfont {
   font-size: 24px;
-  padding: 0 6px;
+  padding: 4px 6px;
   cursor: pointer;
   line-height: 30px;
   border-radius: 4px;
+  margin-right: 8px;
 }
-.iconfont:hover {
-  background-color: #fff;
+.iconfont:hover,.iconfont.active {
+  color: #fff;
+  background-color:#409eff;
 }
