--- a/src/App.scss
+++ b/src/App.scss
@@ -1,4 +1,6 @@
-#app{
+$noImgTipHeight: 30px;
+$contentHeight: calc(100% - #{$noImgTipHeight});
+#app {
   position: fixed;
   left: 0;
   right: 0;
@@ -7,33 +9,112 @@
   /* display: flex;
   justify-content: space-between; */
   background-color: #f5f6fa;
-  .header{
+  .header {
     height: 48px;
     background-color: #fff;
-    box-shadow: rgba(0 ,0, 0, .10) 0px 0px 5px 0px;
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 5px 0px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-left: 20px;
+    .logo {
+      font-size: 18px;
+      font-weight: bold;
+    }
+    .icon-box {
+      margin-right: 400px;
+      display: flex;
+      align-items: center;
+      .icon-item {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        height: 50px;
+        align-items: center;
+        padding: 0 7px;
+        cursor: pointer;
+        color: #666;
+        margin: 0 10px;
+        &.active {
+          color: #fff;
+          background-color: #2d88f8;
+        }
+        .iconfont {
+          font-size: 22px;
+        }
+        .icontext {
+          font-size: 12px;
+        }
+      }
+    }
   }
-  .container{
+  .container {
     height: calc(100% - 48px);
     display: flex;
     border-top: 1px solid #c4c6cf;
-    .tree-container{
+    .tree-container {
       width: 240px;
       height: 100%;
       border-right: 1px solid #c4c6cf;
       border-bottom: 1px solid #c4c6cf;
     }
-    .view-container{
+    .view-container {
       flex: 1;
       height: 100%;
       background-color: #f7f7f7;
       padding: 10px;
-      .content-box{
-        background-color: #fff;
+      box-sizing: border-box;
+      // 未插入图片提示语
+      .no-img-tip {
+        font-size: 18px;
+        font-weight: bold;
+        line-height: 30px;
+        height: $noImgTipHeight;
+      }
+      .content-box {
         width: 100%;
-        height: 100%;
+        height: $contentHeight;
+        .design-container {
+          width: 100%;
+          height: 100%;
+        }
+        .preview-container {
+          position: relative;
+          width: 100%;
+          height: 100%;
+          .resizable-handle {
+            position: absolute;
+            &.resizable-n {
+              width: 100%;
+              height: 7px;
+              top: -4px;
+              cursor: n-resize;
+            }
+            &.resizable-s {
+              width: 100%;
+              height: 7px;
+              bottom: -4px;
+              cursor: n-resize;
+            }
+            &.resizable-e {
+              width: 7px;
+              height: 100%;
+              right: -4px;
+              cursor: e-resize;
+            }
+            &.resizable-w {
+              width: 7px;
+              height: 100%;
+              left: -4px;
+              cursor: w-resize;
+            }
+          }
+          border: 1px solid #333;
+          background-color: #ccc;
+        }
       }
     }
-    .prop-container{
+    .prop-container {
       width: 300px;
       height: 100%;
       background-color: #f7f7f7;
