--- a/src/App.scss
+++ b/src/App.scss
@@ -21,7 +21,7 @@ $contentHeight: calc(100% - #{$noImgTipHeight});
       font-size: 18px;
       font-weight: bold;
     }
-    .icon-box {
+    .icon-btn_container {
       margin-right: 400px;
       display: flex;
       align-items: center;
@@ -48,15 +48,66 @@ $contentHeight: calc(100% - #{$noImgTipHeight});
       }
     }
   }
-  .container {
+  & > .container {
     height: calc(100% - 48px);
     display: flex;
     border-top: 1px solid #c4c6cf;
     .tree-container {
-      width: 240px;
+      width: 288px;
       height: 100%;
       border-right: 1px solid #c4c6cf;
       border-bottom: 1px solid #c4c6cf;
+      display: flex;
+      align-items: stretch;
+      .left-bar {
+        width: 48px;
+        background-color: #ececec;
+        // display: flex;
+        // flex-direction: column;
+        // align-items: center;
+        .icon-item {
+          text-align: center;
+          cursor: pointer;
+          padding: 6px 0;
+          margin: 8px 0;
+          position: relative;
+          &:hover{
+            color: #4081ff;
+            &::before{
+              content: attr(data-tooltip);
+              display: block;
+              position: absolute;
+              left: calc(100% + 10px);
+              top: 50%;
+              transform: translateY(-50%);
+              line-height: 18px;
+              font-size: 12px;
+              white-space: nowrap;
+              padding: 6px 8px;
+              border-radius: 4px;
+              background: rgba(0,0,0,.75);
+              color: #fff;
+              z-index: 100;
+            }
+            &::after{
+              content: "";
+              display: block;
+              position: absolute;
+              left: 100%;
+              top: 50%;
+              transform: translateY(-50%);
+              border: 5px solid transparent;
+              border-right-color: rgba(0,0,0,.75);
+              z-index: 100;
+            }
+          }
+          .iconfont {
+            display: block;
+            text-align: center;
+            font-size: 18px;
+          }
+        }
+      }
     }
     .view-container {
       flex: 1;
@@ -121,4 +172,7 @@ $contentHeight: calc(100% - #{$noImgTipHeight});
       border-left: 1px solid #d8d8d8;
     }
   }
+}
+.node-desc{
+  white-space: nowrap;
 }
