--- a/src/components/canvas/style.scss
+++ b/src/components/canvas/style.scss
@@ -6,6 +6,7 @@ body {
   position: relative;
   img {
     width: 100%;
+    user-select: none;
   }
   // 测量
   .measure-container {
@@ -156,17 +157,21 @@ body {
       }
     }
   }
+
+}
+.canvas.container{
+  .iconfont {
+    font-size: 24px;
+    padding: 4px 6px;
+    cursor: pointer;
+    line-height: 30px;
+    border-radius: 4px;
+    margin-right: 8px;
+  }
+  .iconfont:hover,.iconfont.active {
+    color: #fff;
+    background-color:#409eff;
+  }
 }
 
-.iconfont {
-  font-size: 24px;
-  padding: 4px 6px;
-  cursor: pointer;
-  line-height: 30px;
-  border-radius: 4px;
-  margin-right: 8px;
-}
-.iconfont:hover,.iconfont.active {
-  color: #fff;
-  background-color:#409eff;
-}
+
